# nuxt-fastapi-template

./: .env  .gitignore  .prettierrc.json  docker-compose.yaml  docker-compose.yml  justfile  prometheus.yml  pyproject.toml  website.code-workspace
.github/: dependabot.yml
.github/workflows/: ci.dev.yml  dev-ci.yml  lint.yml  prod-ci.yml  test.yml
api/: .dev.env  .dockerignore  .env  .prod.env  Dockerfile  alembic.ini  base.env  cache.py  config.py  constants.py  database.py  databases.py  db.py  dependencies.py  deps.py  dev.env  exceptions.py  limiter.py  main.py  models.py  openapi.json  prod.env  prometheus.py  pyproject.toml  queues.py  redis.py  redis_.py  requirements.txt  rq_.py  sentry.py  tasks.py  test.py  test2.py  test_main.py  utils.py
api/alembic/: env.py
api/auth/: __init__.py  dependencies.py  exceptions.py  models.py  router.py  utils.py
api/items/: __init__.py  exceptions.py  models.py  router.py
api/migrations/: env.py  script.py.mako
api/routers/: auth.py  categories.py  orders.py  products.py  users.py
api/src/: alembic.ini  arq_.py  cache.py  config.py  db.py  dependencies.py  exceptions.py  limiter.py  logfire_.py  main.py  models.py  postgres.py  prod.env  prometheus.py  redis_.py  repository.py  rq_.py  test.py  utils.py
api/src/auth/: __init__.py  dependencies.py  exceptions.py  models.py  router.py  service.py  utils.py
api/src/items/: __init__.py  dependencies.py  exceptions.py  handlers.py  models.py  repository.py  router.py  service.py
api/src/orders/: constants.py  dependencies.py  exceptions.py  models.py  repository.py  router.py  service.py
api/src/tests/: conftest.py
api/src/users/: __init__.py  dependencies.py  exceptions.py  models.py  repository.py  router.py  service.py  utils.py
api/tests/: conftest.py  test_auth.py  test_main.py
api/users/: __init__.py  dependencies.py  exceptions.py  models.py  router.py  utils.py
backend/: .env  Dockerfile  celery.py  config.py  database.py  dependencies.py  main.py  models.py  queues.py  requirements.txt  tasks.py  test.ipynb  test_main.py  utils.py  worker.py
backend/migrations/: env.py
backend/migrations/versions/: 2023_04_14_2219-fce52dc8c971_.py  4050be46e855_.py  a7a4afe6aeed_.py
backend/routers/: accounts.py  auth.py  categories.py  orders.py  products.py  users.py
backend/templates/: base.html
frontend/: .dockerignore  .env  .eslintrc.json  Dockerfile  app.config.ts  app.vue  error.vue  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  uno.config.ts
frontend/layouts/: auth.vue  custom.vue
frontend/pages/: dashboard.vue  forgot-password.vue  index.vue  login.vue  register.vue  ui.vue
frontend/pages/auth/: forgot-password.vue  login.vue  register.vue
frontend/pages/dashboard/: account.vue  index.vue  items.vue  settings.vue
frontend/pages/dashboard/settings/: appearance.vue  index.vue  notifications.vue
scripts/postgres/: backup.sh  restore.sh
scripts/redis/: backup.sh  restore.sh
