[tool.poetry]
name = "api"
version = "0.0.1"
description = ""
authors = ["Mehdi Rtal <mehdirtal7@pm.me>"]
packages = [{include = "src", from = "."}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
sqlmodel = "^0.0.16"
gunicorn = "^21.2.0"
uvicorn = "^0.29.0"
asyncpg = "^0.29.0"
alembic = "^1.12.1"
fastapi-restful = "^0.5.0"
fastapi-cache2 = "^0.2.1"
redis = {extras = ["hiredis"], version = "^5.0.3"}
rq = "^1.16.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
sendgrid = "^6.10.0"
orjson = "^3.9.15"
email-validator = "^2.1.0.post1"
python-multipart = "^0.0.9"
python-dotenv = "^1.0.0"
typing-inspect = "^0.9.0"
pydantic-settings = "^2.1.0"
sellix-python-sdk = "^1.0.9.1"
httpx-oauth = "^0.13.1"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"
async-asgi-testclient = "^1.4.11"
fastapi-limiter = "^0.1.6"
prometheus-fastapi-instrumentator = "^6.1.0"
bcrypt = "^4.1.2"
fastapi-events = "^0.11.0"
rq-scheduler = "^0.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
