[project]
name = "api"
version = "0.1.0"
authors = [
    { name = "MehdiRtal", email = "mehdirtal7@pm.me" }
]
dependencies = [
    "fastapi>=0.110.1",
    "sqlmodel>=0.0.16",
    "gunicorn>=21.2.0",
    "uvicorn>=0.29.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "fastapi-cache2>=0.2.1",
    "redis[hiredis]>=5.0.3",
    "rq>=1.16.1",
    "python-jose[cryptography]>=3.3.0",
    "sendgrid>=6.11.0",
    "orjson>=3.10.0",
    "email-validator>=2.1.1",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.2.1",
    "sellix-python-sdk>=1.0.9.1",
    "httpx-oauth>=0.13.2",
    "pytest-asyncio>=0.23.6",
    "async-asgi-testclient>=1.4.11",
    "fastapi-limiter>=0.1.6",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "bcrypt>=4.1.2",
    "fastapi-events>=0.11.1",
    "rq-scheduler>=0.13.1",
    "pytest>=8.1.1",
]
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
